[gd_scene load_steps=7 format=3 uid="uid://2s8puhwnfpop"]

[ext_resource type="Script" path="res://scenes/main/main.gd" id="1_85xt6"]
[ext_resource type="PackedScene" uid="uid://dxlypgrtl4pn5" path="res://scenes/background/background.tscn" id="1_aqvej"]
[ext_resource type="PackedScene" uid="uid://yykvlapgbrxn" path="res://scenes/player/player.tscn" id="2_misk2"]
[ext_resource type="PackedScene" uid="uid://cdo6i4chenwkx" path="res://scenes/UI/ui.tscn" id="2_psplh"]
[ext_resource type="Texture2D" uid="uid://c4idliwvoyn4" path="res://scenes/UI/START (48 x 8).png" id="3_tml71"]
[ext_resource type="Texture2D" uid="uid://kxsmvlfoclut" path="res://scenes/UI/GAME_OVER (72 x 8).png" id="4_mk2qt"]

[node name="Main" type="Node2D"]
script = ExtResource("1_85xt6")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="UI" parent="CanvasLayer" instance=ExtResource("2_psplh")]

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer"]
process_mode = 2
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="StartButton" type="TextureButton" parent="CanvasLayer/CenterContainer"]
visible = false
layout_mode = 2
texture_normal = ExtResource("3_tml71")

[node name="GameOver" type="TextureRect" parent="CanvasLayer/CenterContainer"]
layout_mode = 2
texture = ExtResource("4_mk2qt")

[node name="Background" parent="." instance=ExtResource("1_aqvej")]
process_mode = 3

[node name="Player" parent="." instance=ExtResource("2_misk2")]

[connection signal="pressed" from="CanvasLayer/CenterContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="died" from="Player" to="." method="_on_player_died"]
[connection signal="shield_changed" from="Player" to="CanvasLayer/UI" method="update_shield"]
